--- a/HRCustomClasses.csproj
+++ b/HRCustomClasses.csproj
@@ -31,7 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HREngine">
+    <Reference Include="HREngine, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\HREngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
