some fixes + testing boards from log :D

--- a/HRCustomClasses.csproj
+++ b/HRCustomClasses.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ai\BoardTester.cs" />
     <Compile Include="BasicBot.cs" />
     <Compile Include="BotBase.cs" />
     <Compile Include="BoardControl.cs" />
