--- a/HRCustomClasses.csproj
+++ b/HRCustomClasses.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BasicBot.cs" />
     <Compile Include="BotBase.cs" />
     <Compile Include="BoardControl.cs" />
+    <Compile Include="ai\PenalityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rush.cs" />
     <Compile Include="ai\Settings.cs" />
