--- a/HRCustomClasses.csproj
+++ b/HRCustomClasses.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ai\BoardTester.cs" />
+    <Compile Include="ai\ComboBreaker.cs" />
     <Compile Include="BasicBot.cs" />
     <Compile Include="BotBase.cs" />
     <Compile Include="BoardControl.cs" />
