--- a/HRCustomClasses.csproj
+++ b/HRCustomClasses.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ai\BehaviorRush.cs" />
     <Compile Include="ai\MiniSimulator.cs" />
     <Compile Include="ai\Mulligan.cs" />
+    <Compile Include="ai\Probabilitymaker.cs" />
     <Compile Include="BasicBot.cs" />
     <Compile Include="BotBase.cs" />
     <Compile Include="BoardControl.cs" />
